--- a/resources/speeches/2023-11-Smalltalk2023DynabookRevisited/dynabookRevisited.tex
+++ b/resources/speeches/2023-11-Smalltalk2023DynabookRevisited/dynabookRevisited.tex
@@ -129,19 +129,76 @@
   consideration.
 
 \end{frame}
+%
+\begin{frame}{Software environment}
+  What do we need?
 
-\begin{frame}{Software}
+  \vspace{10pt}
   
+  \begin{itemize}
+  \item Free software from the basement (OS) to the attic (end user
+    applications)
+  \item Rapid prototyping
+  \item A malleable environment to develop knowledge models with state
+    of the art visual representation
+  \item Easy to implement DSL to script knowledge models
+  \item Portable to different hardware architecture
+  \end{itemize}
+
+  \vspace*{10pt}
+
+  \tip\ Cuis-Smalltalk to develop end user applications and knowledge
+  models
 \end{frame}
-
-\begin{frame}{Hardware}
-  
+%
+\begin{frame}{Free Hardware}
+  \fontsize{14pt}{8pt}\selectfont
+  \begin{center}
+    Design there\\
+    \vspace*{10pt}
+    Manufacture anywhere
+  \end{center}
 \end{frame}
 
 \begin{frame}{Economic}
+  Large scale adoption in one place, also require local economic
+  benefit on that place:
+  \begin{itemize}
+  \item Software support
+  \item Assembling/Manufacturing
+  \item Repairing
+  \item Training
+  \end{itemize}
+
+  \vspace*{10pt}
+  
+  \tip\ Free software \& hardware as prerequisites
+  
 \end{frame}
 
 \section{Where are we?}
+\begin{frame}{Is there any plan?}
+\begin{center}
+  \includegraphics[width=0.8\textwidth]{anyPilot.jpeg}
+\end{center}
+\end{frame}
+\begin{frame}{Roughly}
+  Iterations
+  \begin{enumerate}
+  \item \textbf{Develop the Dynabook app} (me, but join!)
+  \item Test Dynabook app in school and iterate with the development (1 or 2 users)
+  \item Develop hardware prototype with existing hardware
+  \item Develop Dynabook operating system
+  \item Test Dynabook app in school and iterate with the development (tenth of users)
+  \item Test Dynabook in school and iterate on the hardware and software (1 or 2 users)
+  \item Test Dynabook hardware and software with one classroom (30 users, students and teachers)
+  \end{enumerate}
+\end{frame}
+
+\begin{frame}{Visual Concepts}
+  
+\end{frame}
+
 
 \section{How to get involved?}
 
