--- a/resources/speeches/2023-11-Smalltalk2023DynabookRevisited/dynabookRevisited.tex
+++ b/resources/speeches/2023-11-Smalltalk2023DynabookRevisited/dynabookRevisited.tex
@@ -40,16 +40,25 @@
 \end{frame}
 %
 \begin{frame}{Contents}
-  \tableofcontents[hideallsubsections]
+  \begin{columns}
+    \begin{column}{0.5\textwidth}
+      \tableofcontents[hideallsubsections]      
+    \end{column}
+    \begin{column}{0.5\textwidth}
+      \includegraphics[width=\textwidth]{image2-sm.png}      
+    \end{column}
+  \end{columns}
 \end{frame}
 
 \section{Why this presentation?}
 
-\begin{frame}{Cashier machine for education}
+\begin{frame}{The cashier register of education}
   \begin{itemize}
-  \item The Dynabook is still only a concept
+  \item The Dynabook is a concept
   \item In school, dynamic numeric tool mostly not used\\
-    \tip\ observe the other sectors of the society
+    \tip\ compare to the other sectors of the society
+  \item We need a dedicated hardware and software environment for a
+    meaningful use in education
 \end{itemize}
 \end{frame}
 %
@@ -72,7 +81,7 @@
 \begin{frame}
   \fontsize{14pt}{8pt}\selectfont
 \begin{center}
-  Dynamic model of knowledge\\ the learner can operate on
+  Dynamic model of knowledge\\ the user can design and/or operate
 \end{center}
 \end{frame}
 %
@@ -92,7 +101,7 @@
   \begin{itemize}
   \item Yes, an educator. Manipulating, designing, sharing knowledge.\\
     \tip\ Library of dynamic knowledge models, scriptable with a DSL
-    and/or GUI (think \drgeo)
+    and/or GUI (think \textbf{\drgeo}, \textbf{keynote Tuesday 9/11 at 11:00})
 
   \item ... but also a manager
     \begin{itemize}
@@ -162,7 +171,7 @@
 
 \begin{frame}{Economic}
   Large scale adoption in one place, also require local economic
-  benefit on that place:
+  benefits on that place:
   \begin{itemize}
   \item Software support
   \item Assembling/Manufacturing
@@ -196,10 +205,105 @@
 \end{frame}
 
 \begin{frame}{Visual Concepts}
-  
+\begin{center}
+  \includegraphics[width=0.8\textwidth]{image6-sm.png}
+\end{center}
 \end{frame}
-
-
+%
+\begin{frame}{Management - Concept}
+\begin{center}
+  \includegraphics[width=0.9\textwidth]{image17.png}
+\end{center}
+\end{frame}
+%
+\begin{frame}{Management Viewer}
+\begin{center}
+  \includegraphics[width=0.5\textwidth]{prefViewer.png}
+\end{center}
+\end{frame}
+%
+\begin{frame}{Management Editor}
+\begin{center}
+  \includegraphics[width=0.4\textwidth]{prefEditor.png}
+\end{center}
+\end{frame}
+%
+\begin{frame}{Knowledge environment}
+\begin{center}
+  \includegraphics[width=0.8\textwidth]{image3.png}
+\end{center}
+\end{frame}
+%
+\begin{frame}{Paper Morph}
+\begin{center}
+  \includegraphics[width=0.5\textwidth]{image8.png}
+\end{center}
+\end{frame}
+%
+\begin{frame}{Paper Morph -- Pressure emulation}
+\begin{center}
+  \includegraphics[width=0.8\textwidth]{image9.png}
+\end{center}
+\end{frame}
 \section{How to get involved?}
+\begin{frame}{1. Who \& What?}
+  \begin{itemize}
+  \item Educators
+
+    \tip\ Write the specifications of interactive knowledge models in
+    your domain
+
+    \tip\ Review, compile existing pedagogical resources -- under free
+    license
+  \vspace*{10pt}
+
+  \item Software developers
+
+    \tip\ Participate to the Dynabook.app design
+    
+    \tip\ Code with Cuis-Smalltalk interactive knowledge model and DSL
+  \vspace*{10pt}
+    
+  \item Professors
+
+    \tip\ Student projects
+  \end{itemize}
+\end{frame}
+%
+\begin{frame}{2. Who \& What?}
+  \begin{itemize}
+  \item Economists
+
+    \tip\ Prospective on economic benefits
+
+    \tip\ Environmental impacts
+  \vspace*{10pt}
+
+  \item Hardware specialists
+
+    \tip\ Participate to the Dynabook hardware specification and
+    design
+  \vspace*{10pt}
+
+  \item Benefactors
+
+    \tip\ Set up a foundation to support the software and hardware
+    specifications, design and development
+    
+  \end{itemize}
+\end{frame}
+%
+\begin{frame}
+  \begin{quote}
+    Some cathedrals took a century to complete. Can you imagine the
+    grandeur and scope of a program that would take as long?
+  \end{quote}
+  \begin{flushright}
+    -- Alan Perlis
+  \end{flushright}
+  \begin{center}
+    \url{http://github.com/hilaire/dynabook}
+  \end{center}
+\end{frame}
 
 \end{document}
