--- a/resources/speeches/2023-11-Smalltalk2023DynabookRevisited/dynabookRevisited.tex
+++ b/resources/speeches/2023-11-Smalltalk2023DynabookRevisited/dynabookRevisited.tex
@@ -195,11 +195,13 @@
   Iterations
   \begin{enumerate}
   \item \textbf{Develop the Dynabook app} (me, but join!)
-  \item Test Dynabook app in school and iterate with the development (1 or 2 users)
+  \item Test Dynabook app in school and iterate with the development (1 or 2 teachers)
   \item Develop hardware prototype with existing hardware
   \item Develop Dynabook operating system
-  \item Test Dynabook app in school and iterate with the development (tenth of users)
-  \item Test Dynabook in school and iterate on the hardware and software (1 or 2 users)
+  \item Test Dynabook app in school and iterate with the development
+    (tenth of teachers)
+  \item Test Dynabook in school and iterate on the hardware and
+    software (1 or 2 teachers/students)
   \item Test Dynabook hardware and software with one classroom (30 users, students and teachers)
   \end{enumerate}
 \end{frame}
