--- a/resources/speeches/2023-11-Smalltalk2023DynabookRevisited/dynabookRevisited.tex
+++ b/resources/speeches/2023-11-Smalltalk2023DynabookRevisited/dynabookRevisited.tex
@@ -297,11 +297,10 @@
 %
 \begin{frame}
   \begin{quote}
-    Some cathedrals took a century to complete. Can you imagine the
-    grandeur and scope of a program that would take as long?
-  \end{quote}
+    If everything you try works. Your aren't trying hard enought.
+      \end{quote}
   \begin{flushright}
-    -- Alan Perlis
+    -- Gordon Moore
   \end{flushright}
   \begin{center}
     \url{http://github.com/hilaire/dynabook}
