--- a/resources/speeches/2023-11-Smalltalk2023DynabookRevisited/dynabookRevisited.tex
+++ b/resources/speeches/2023-11-Smalltalk2023DynabookRevisited/dynabookRevisited.tex
@@ -57,11 +57,24 @@
   \item The Dynabook is a concept
   \item In school, dynamic numeric tool mostly not used\\
     \tip\ compare to the other sectors of the society
-  \item We need a dedicated hardware and software environment for a
-    meaningful use in education
-\end{itemize}
+  \end{itemize}
 \end{frame}
 %
+\begin{frame}{Not this cashier register}
+  \begin{center}
+      \includegraphics[width=0.4\textwidth]{Old_National_Cash_Register.jpg}
+    \end{center}
+\end{frame}
+%
+\begin{frame}{But more like this one}
+  \begin{center}
+    \includegraphics[width=0.5\textwidth]{Telpo-C68-02.png}
+  \end{center}
+  
+  \tip\ We need a dedicated hardware and software environment for a
+  meaningful use in education
+\end{frame}
+  %
 \begin{frame}{To get you involved}
   \begin{itemize}
   \item Educator, professor
