--- a/resources/speeches/2023-11-Smalltalk2023DynabookRevisited/dynabookRevisited.tex
+++ b/resources/speeches/2023-11-Smalltalk2023DynabookRevisited/dynabookRevisited.tex
@@ -51,13 +51,18 @@
 \end{frame}
 
 \section{Why this presentation?}
-
-\begin{frame}{The cashier register of education}
+\subsection{The cashier register of education}
+\begin{frame}
   \begin{itemize}
-  \item The Dynabook is a concept
-  \item In school, dynamic numeric tool mostly not used\\
+  \item The Dynabook in education is still mostly a concept
+  \item In school, computerized environment used some time\\
     \tip\ compare to the other sectors of the society
   \end{itemize}
+
+  \vspace{20pt}
+  
+  \tip\ Any serious Dynabook realization should be considered as a
+  \emph{cashier register of education}
 \end{frame}
 %
 \begin{frame}{Not this cashier register}
@@ -71,11 +76,11 @@
     \includegraphics[width=0.5\textwidth]{Telpo-C68-02.png}
   \end{center}
   
-  \tip\ We need a dedicated hardware and software environment for a
+  \tip\ What about a dedicated hardware and software environment for a
   meaningful use in education
 \end{frame}
-  %
-\begin{frame}{To get you involved}
+\subsection{To get you involved}
+\begin{frame}
   \begin{itemize}
   \item Educator, professor
   \item Benefactor
@@ -94,14 +99,13 @@
 \begin{frame}
   \fontsize{14pt}{8pt}\selectfont
 \begin{center}
-  Dynamic model of knowledge\\ the user can design and/or operate
+  A vehicle for dynamic models of knowledge\\ the user can design and/or operate on
 \end{center}
 \end{frame}
 %
 \begin{frame}{Dynamic model of the \emph{Newton Telescop}}
- The learner
-  can operate a different level of knowledge light beam, focus point
-  (change the mirror curve)
+  The learner can operate a different level of knowledge light beam,
+  focus point (change the mirror curve)
 \begin{center}
   \includegraphics[width=0.3\textwidth]{Newton.png}
 \end{center}
@@ -133,7 +137,7 @@
 \end{frame}
 %
 \begin{frame}{Kid}
-  Can we reduce the bag wight?
+  Can we reduce the bag weight?
 
   \vspace*{10pt}
 
@@ -169,14 +173,14 @@
 
   \vspace*{10pt}
 
-  \tip\ Cuis-Smalltalk to develop end user applications and knowledge
+  \tip\ Cuis-Smalltalk\footnote[frame]{assumed biais} to develop end user applications and knowledge
   models
 \end{frame}
 %
 \begin{frame}{Free Hardware}
   \fontsize{14pt}{8pt}\selectfont
   \begin{center}
-    Design there\\
+    Design there \& there\\
     \vspace*{10pt}
     Manufacture anywhere
   \end{center}
