--- a/resources/speeches/2023-11-Smalltalk2023DynabookRevisited/dynabookRevisited.tex
+++ b/resources/speeches/2023-11-Smalltalk2023DynabookRevisited/dynabookRevisited.tex
@@ -15,7 +15,8 @@
 \newcommand{\cmark}{\text{\ding{51}}}
 \newcommand{\xmark}{\text{\ding{55}}}
 
-\title{Revisiting the Dynabook concept}
+\title{Revisiting the Dynabook concept\\
+\emph{for education}}
 
 \author{Hilaire Fernandes}
 \institute[DIP, Geneva]{Department of Public Instruction \\ Geneva}
@@ -51,7 +52,7 @@
 \end{frame}
 
 \section{Why this presentation?}
-\subsection{The cashier register of education}
+\subsection{The cash register of education}
 \begin{frame}
   \begin{itemize}
   \item The Dynabook in education is still mostly a concept
@@ -62,10 +63,10 @@
   \vspace{20pt}
   
   \tip\ Any serious Dynabook realization should be considered as a
-  \emph{cashier register of education}
+  \emph{cash register of education}
 \end{frame}
 %
-\begin{frame}{Not this cashier register}
+\begin{frame}{Not this cash register}
   \begin{center}
       \includegraphics[width=0.4\textwidth]{Old_National_Cash_Register.jpg}
     \end{center}
@@ -314,7 +315,7 @@
 %
 \begin{frame}
   \begin{quote}
-    If everything you try works. Your aren't trying hard enought.
+    If everything you try works, you aren't trying hard enough.
       \end{quote}
   \begin{flushright}
     -- Gordon Moore
